# ai-practices

./: .gitattributes  .gitignore  .gitlab-ci.yml  AGENTS.md  Cargo.toml  README.fr.md  README.md  SECURITY.md  db-security-manifest.json  deny.toml  justfile
.github/: dependabot.yml
.github/workflows/: a11y-perf.yml  ci.yml  cohort-e2e.yml  db-inspection.yml  e2e.yml  hygiene.yml
apps/web/: Cargo.toml  Dioxus.toml  README.md  index.html  playwright.config.ts
apps/web/assets/: manifest.json  styles.css  tokens.css
apps/web/e2e/: cohort.spec.ts  parcours.spec.ts
apps/web/public/: sw.js
apps/web/src/: browser.rs  lib.rs  main.rs
apps/web/tests/: wcag_contrast.rs
content/: README.md
content/activities/: core.yml
content/audit/: existant-template.yml  pilot-vs-cos.yml
content/claims/: core.yml
content/competencies/: core.yml
content/concepts/: batch-001.yml  core.yml
content/graph/: core.yml
content/learning-objectives/: core.yml
content/learning-paths/: core.yml
content/media/: README.md  pilot.yml
content/misconceptions/: core.yml
content/questions/: README.md  batch-001.yml  corpus-seed.yml  data-sovereignty.yml  media.yml  pilot.yml  privacy-rgpd.yml  reliability.yml  responsibility-bias.yml  security-prompt.yml
content/risks/: core.yml
content/sources/: core.yml
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/audit/: Cargo.toml
crates/audit/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/content/: Cargo.toml
crates/content/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/session/: Cargo.toml
crates/session/src/: cohort.rs  lib.rs
crates/store/.sqlx/: query-498789573ce768c07a1514b38a92635d63c527bb31ebc9afa2619d32d7d588ea.json  query-4d56e8311067d30bb066383c0a50f335e6473d6c167bfa85aad5ce62daf62df2.json  query-c3e2ebec886cab153449713982d48a1cafb7344296e261d8efd4133d33334265.json  query-edb3434a7b7cc501434c9fe2c198b87856d1755203da5d37be9622355527e9fe.json
crates/store/migrations/: 0002_question_distribution.sql
crates/store/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/assets/: components.css  libre-ia-bridge.css
crates/ui/assets/fonts/: fonts.css
crates/ui/examples/: preview.html
crates/ui/src/: lib.rs
docs/: README.md  api-contracts.md  architecture.md  cahier-des-charges.md  content-governance.md  data-model.md  deploy.md  grille-audit-biais-media.md  grille-audit-existant.md  implementation-plan.md  local-review.md  model-delegation.md  multiplatform.md  observability.md  product-boundaries.md  product-readiness.md  question-model.md  scoring.md  security-rgpd.md  stack.md  testing-strategy.md  ux.md  vision.md
docs/00-programme/: decision-log.md  programme-documentaire.md  roadmap-documentaire.md
docs/01-foundation/: contribution-policy.md  glossary.md  principles.md  project-charter.md  source-policy.md  vision-extended.md
docs/02-research/: agents.md  ai-literacy.md  bibliography.md  cognitive-science.md  cybersecurity.md  evaluation.md  generative-ai.md  governance-regulation.md  hallucinations.md  llm.md  rag.md  state-of-the-art.md
docs/03-domain-model/: ai-literacy-framework.md  competency-model.md  knowledge-graph.md  misconceptions.md  ontology.md  risk-model.md  taxonomy.md
docs/04-content-factory/: content-factory.md  editorial-guide.md  feedback-writing-guide.md  prompt-library.md  quality-gates.md  question-writing-guide.md  review-process.md  scenario-writing-guide.md
docs/05-product-learning/: adaptive-learning.md  analytics-privacy.md  learning-paths.md  pedagogy.md  scoring-model.md  ux-principles.md
docs/06-technical-contracts/: api-contracts-extended.md  data-model-extended.md  multi-agent-review.md  pipeline.md  provenance.md  schemas.md
docs/07-benchmark/: benchmark-ai-literacy-tools.md  benchmark-corporate-training.md  benchmark-serious-games.md
docs/adrs/: 0001-product-boundary.md  0002-stack-rust-dioxus-multiplatform.md  0003-content-governance-and-no-rh-scoring.md  0004-media-ai-bias-review.md  0006-anonymity-and-retention-cohort.md  0007-refonte-jeu-sensibilisation-biais.md  0008-reuse-medias-synthetiques-droits-acquis.md  0009-cohorte-per-item-k-anon.md  0010-typed-browser-bridge-without-unsafe-eval.md
docs/implementation/: 00-agent-operating-model.md  01-rust-workspace.md  02-domain-contracts.md  03-content-validation.md  04-audit-engine.md  05-cli.md  06-session-engine.md  07-api-axum.md  08-dioxus-pwa.md  09-desktop-mobile.md
docs/plans/: 2026-07-ai-practices-convergence-prep.md  2026-07-website-curriculum-reconstruction.md
docs/templates/: media-review-template.yml  question-template.yml
fixtures/: session-basic.json
prompts/: content-review-agent.md  implementation-agent.md  security-rgpd-review-agent.md
schemas/: activity.v1.schema.json  audit-existing.schema.json  media-review.schema.json  question.schema.json
scripts/: build-all.sh  test-postgres-disposable.sh
