[workspace]
resolver = "3"
members = [
    "crates/domain",
    "crates/content",
    "crates/audit",
    "crates/session",
    "crates/api",
    "crates/cli",
    "crates/ui",
    "apps/web",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
authors = ["Constantin Jais"]
repository = "https://github.com/constantin-jais/rumble-ai-practices"

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
dioxus = { version = "0.7", default-features = false, features = ["macro", "html", "signals"] }
dioxus-ssr = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync"] }
tower = { version = "0.5", features = ["util"] }
yaml_serde = "0.10"
thiserror = "2"

rumble-ai-practices-domain = { path = "crates/domain" }
rumble-ai-practices-content = { path = "crates/content" }
rumble-ai-practices-audit = { path = "crates/audit" }
rumble-ai-practices-session = { path = "crates/session" }
rumble-ai-practices-api = { path = "crates/api" }
rumble-ai-practices-ui = { path = "crates/ui" }
rumble-ai-practices-web = { path = "apps/web" }

[profile.release]
strip = true
lto = "thin"
