[package]
name = "rumble-ai-practices-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "rumble_ai_practices_web"
path = "src/lib.rs"

[features]
default = []
ssr = ["dep:dioxus-ssr"]
# One shared Root, four render targets. Host CI (default features, none of
# these) compiles an empty `main`; `dx build --platform <p>` enables the
# matching feature and launches the real entrypoint.
web = [
    "dioxus/launch",
    "dioxus/devtools",
    "dioxus/logger",
    "dioxus/lib",
    "dioxus/document",
    "dioxus/web",
]
desktop = ["dioxus/launch", "dioxus/document", "dioxus/desktop"]
mobile = ["dioxus/launch", "dioxus/document", "dioxus/mobile"]

# Application binary. Its body is cfg-gated on any render feature; on host CI
# (default features) it compiles to an empty `main` with no renderer deps.
[[bin]]
name = "rumble-ai-practices-web-app"
path = "src/main.rs"

[dependencies]
# `hooks` adds use_signal/use_effect/spawn on top of the workspace base
# features; they work in SSR too, so the interactive shell compiles under
# default features (host CI) as well as under `web`.
dioxus = { workspace = true, features = ["hooks"] }
dioxus-ssr = { workspace = true, optional = true }
rumble-ai-practices-ui.workspace = true
serde.workspace = true

[dev-dependencies]
dioxus-ssr.workspace = true
