[package]
name = "rumble-ai-practices-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "rumble_ai_practices_web"
path = "src/lib.rs"

[features]
default = []
ssr = ["dep:dioxus-ssr"]
# One shared Root, four render targets. Host CI (default features, none of
# these) compiles an empty `main`; `dx build --platform <p>` enables the
# matching feature and launches the real entrypoint.
web = [
    "dioxus/launch",
    "dioxus/devtools",
    "dioxus/logger",
    "dioxus/lib",
    "dioxus/document",
    "dioxus/web",
]
desktop = ["dioxus/launch", "dioxus/document", "dioxus/desktop"]
mobile = ["dioxus/launch", "dioxus/document", "dioxus/mobile"]

# Application binary. Its body is cfg-gated on any render feature; on host CI
# (default features) it compiles to an empty `main` with no renderer deps.
[[bin]]
name = "rumble-ai-practices-web-app"
path = "src/main.rs"

[dependencies]
# `hooks` adds use_signal/use_effect/spawn on top of the workspace base
# features; they work in SSR too, so the interactive shell compiles under
# default features (host CI) as well as under `web`.
dioxus = { workspace = true, features = ["hooks"] }
dioxus-ssr = { workspace = true, optional = true }
rumble-ai-practices-ui.workspace = true
# The corpus is embedded (include_str!) and driven through the engine at
# runtime: content parses/validates, session scores each choice into a verdict
# (ADR 0003 — no scoring in the UI). These are pure Rust and compile to wasm.
rumble-ai-practices-domain.workspace = true
rumble-ai-practices-content.workspace = true
rumble-ai-practices-session.workspace = true
serde.workspace = true
# Local JSON export of the private synthesis (categories + verdicts only).
serde_json.workspace = true

# Offline-first cohort call (POST /v1/cohort): a wasm-only fetch. The host/SSR
# build never pulls it — `fetch_cohort` is a stub off-wasm, so the summary
# degrades to local-only there, exactly as it does offline in the browser.
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.7", default-features = false, features = ["http", "json"] }

[dev-dependencies]
dioxus-ssr.workspace = true
