[package]
name = "rumble-ai-practices-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
rumble-ai-practices-domain.workspace = true
rumble-ai-practices-session.workspace = true
# Anonymous cohort persistence (ADR 0006): the API persists completed anonymous
# results and reads the k-anonymous distribution back.
rumble-ai-practices-store.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
uuid.workspace = true

[dev-dependencies]
tower.workspace = true
# Test-only: the wire-contract test drives POST /v1/cohort with the real client
# types (CohortSubmission/CohortEnvelope), so app<->API drift fails the build.
rumble-ai-practices-web.workspace = true
