[package]
name = "rumble-ai-practices-content"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rumble-ai-practices-domain.workspace = true
serde.workspace = true
serde_json.workspace = true
yaml_serde.workspace = true
thiserror.workspace = true
